[tool.poetry]
name = "omnixrl"
version = "0.1.0"
description = "A JAX Based Reinforcement Learning Library"
authors = ["Sandesh Katakam <sandeshkatakam@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
